--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,11 +35,12 @@ version = "1"
 features = ["v4"]
 
 [dependencies.songbird]
-version = "0.4"
+version = "0.5"
 default-features = true
+features = ["receive"]
 [dependencies.symphonia]
 version = "0.5"
-features = ["mp3"]
+features = ["all"]
 
 [dependencies.serenity]
 version = "0.12"
