--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2021"
 [dependencies]
 chrono = "0.4"
 chrono-tz = "0.6"
-bigdecimal = "0"
+[dependencies.bigdecimal]
+version = "0.4.8"
+features = ["serde"]
 
 [dependencies.strum]
 version = "0.26"
