--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,7 +75,6 @@ version = "0.7"
 features = ["postgres"]
 
 [dependencies.azel]
-path = "../azel"
 version = "0"
 
 [dependencies.reqwest]
@@ -83,3 +82,6 @@ version = "0.12.12"
 [dependencies.youtube_dl]
 version = "0.10.0"
 features = ["downloader-rustls-tls"]
+
+[patch.crates-io.azel]
+path = "../azel"
